NEL: Add ERR_EMPTY_RESPONSE -> "http.response.empty"

Add ERR_EMPTY_RESPONSE to the list of errors NEL can report, since it's
easy to cause in unittests with EmbeddedTestServer.

Bug: 792972
Change-Id: Ic3a2cd6018ab18a1ad4b5a9d0c51e4bbf7f1ef5e
Reviewed-on: https://chromium-review.googlesource.com/814755
Reviewed-by: Miriam Gershenson <mgersh@chromium.org>
Commit-Queue: Julia Tuttle <juliatuttle@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522887}
Former-commit-id: a28dcb986967a86b49741b9402b6af364876db45